--- a/src/pages/Game/TaggableImage/TaggableImage.module.css
+++ b/src/pages/Game/TaggableImage/TaggableImage.module.css
@@ -9,14 +9,43 @@
 }
 
 .marker {
+  height: 25px;
+  width: 25px;
   position: absolute;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 50px;
+  background-color: purple;
+  box-shadow: 0 0 8px 8px purple;
+
   transform: translate(-50%, -50%);
 }
 
+.markerImg {
+  max-height: 240%;
+  max-width: 240%;
+}
+
 .incorrect {
-  composes: marker;
+  height: 16px;
+  width: 16px;
+  position: absolute;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 50px;
+  background-color: rgb(214, 33, 33);
+  box-shadow: 0 0 2px 2px rgb(214, 33, 33);
+  color: white;
+  font-weight: bold;
 
   opacity: 0;
+  transform: translate(-50%, -50%);
   animation: fadeout 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
