--- a/src/pages/Game/SelectionBox/SelectionBox.module.css
+++ b/src/pages/Game/SelectionBox/SelectionBox.module.css
@@ -1,15 +1,13 @@
 .selectionBox {
   position: absolute;
-  height: 40px;
-  width: 40px;
+  pointer-events: none;
 
   display: flex;
   justify-content: center;
 
-  background-color: rgba(153, 205, 50, 0.357);
-  border-radius: 6px;
+  border-radius: 50px;
   border: 2px solid rgb(107, 142, 36);
-  transform: translate(-50%, -50%);
+  background-repeat: no-repeat;
 }
 
 .menu {
@@ -29,6 +27,7 @@
 
   transform: translate(10px, -50%);
   overflow: hidden;
+  pointer-events: auto;
 }
 
 .item {
