--- a/src/pages/Game/ChecklistItem/ChecklistItem.module.css
+++ b/src/pages/Game/ChecklistItem/ChecklistItem.module.css
@@ -10,7 +10,7 @@
   align-items: center;
   gap: 10px;
 
-  border: 1px solid black;
+  background-color: var(--neutral-500);
   border-radius: 8px;
 }
 
