--- a/src/pages/Game/SelectionBox/SelectionBox.module.css
+++ b/src/pages/Game/SelectionBox/SelectionBox.module.css
@@ -6,7 +6,9 @@
   justify-content: center;
 
   border-radius: 50px;
-  border: 2px solid rgb(107, 142, 36);
+  border: 2px solid var(--accent);
+  box-shadow: 0 0 3px 3px var(--neutral-900);
+
   background-repeat: no-repeat;
 }
 
@@ -16,18 +18,28 @@
 
   position: absolute;
   top: 50%;
-  left: 100%;
+  right: 100%;
 
   display: flex;
   flex-direction: column;
 
   list-style: none;
-  background-color: white;
+  background-image: linear-gradient(
+    90deg,
+    var(--neutral-700),
+    var(--neutral-900)
+  );
   border-radius: 8px;
 
-  transform: translate(10px, -50%);
+  transform: translate(-10px, -50%);
   overflow: hidden;
   pointer-events: auto;
+}
+
+.menuLeft {
+  left: 100%;
+  right: auto;
+  transform: translate(10px, -50%);
 }
 
 .item {
@@ -38,10 +50,15 @@
   gap: 4px;
 
   cursor: pointer;
+  color: var(--neutral-100);
 }
 
 .item:hover {
-  background-color: #ebebeb;
+  background-image: linear-gradient(
+    270deg,
+    var(--neutral-500),
+    var(--neutral-700)
+  );
 }
 
 .img {
