--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,7 @@
   --neutral-900: hsl(291, 30%, 5%);
   --neutral-700: hsl(290, 21%, 12%);
   --neutral-500: hsl(285, 14%, 28%);
+  --neutral-400: hsl(285, 11%, 42%);
   --neutral-300: hsl(285, 12%, 62%);
   --neutral-100: hsl(285, 100%, 98%);
 
