--- a/src/pages/Game/SelectionBox/SelectionBox.module.css
+++ b/src/pages/Game/SelectionBox/SelectionBox.module.css
@@ -56,7 +56,7 @@
 .item:hover {
   background-image: linear-gradient(
     270deg,
-    var(--neutral-500),
+    var(--accent-dark),
     var(--neutral-700)
   );
 }
