--- a/src/pages/Home/index.module.css
+++ b/src/pages/Home/index.module.css
@@ -35,7 +35,7 @@
 
   font-size: 24px;
   color: var(--neutral-100);
-  background: var(--neutral-700);
+  background: linear-gradient(180deg, var(--accent), var(--accent-dark) 32%);
 
   opacity: 0;
   transform: translate(100%, 100%) rotate(-45deg);
