Styles Level Complete Menu component

--- a/src/pages/Game/LevelCompleteMenu/LevelCompleteMenu.module.css
+++ b/src/pages/Game/LevelCompleteMenu/LevelCompleteMenu.module.css
@@ -10,11 +10,79 @@
   justify-content: center;
 
   background: #0000007c;
+  animation: container 0.3s;
 }
 
 .menu {
-  max-width: 250px;
-  min-height: 300px;
+  max-width: min-content;
+  padding: 32px;
 
-  background: tomato;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  background-color: var(--neutral-700);
+  border-radius: 16px;
+  animation: menu 0.3s;
+}
+
+.heading,
+.score {
+  margin: 0;
+}
+
+.heading {
+  font-size: 24px;
+}
+
+.input {
+  width: 100%;
+  padding: 4px 8px;
+  margin-top: 4px;
+  margin-bottom: 8px;
+
+  color: var(--neutral-100);
+  background-color: var(--neutral-500);
+  border: 2px solid var(--neutral-400);
+  border-radius: 8px;
+}
+
+.input:focus-visible {
+  border-color: var(--accent);
+  outline: none;
+}
+
+.button {
+  width: 100%;
+  padding: 8px 16px;
+
+  font-weight: bold;
+  text-decoration: none;
+  border: none;
+  border-radius: 50px;
+  color: var(--neutral-100);
+  background: linear-gradient(180deg, var(--accent), var(--accent-dark));
+
+  transition: 0.1s;
+}
+
+.button:hover {
+  transform: scale(1.04);
+}
+
+@keyframes menu {
+  0% {
+    transform: translateY(-200%) scale(0.4);
+  }
+
+  0%,
+  25% {
+    opacity: 0;
+  }
+}
+
+@keyframes container {
+  0% {
+    background-color: transparent;
+  }
 }
