Replace img tag with ImageLoader component

--- a/src/pages/Home/index.module.css
+++ b/src/pages/Home/index.module.css
@@ -47,6 +47,10 @@
   transform: translate(60%, 60%) rotate(-45deg);
 }
 
+.placeholder {
+  background-color: var(--neutral-700);
+}
+
 .img {
   min-width: 100%;
   height: 100%;
