--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,6 +12,11 @@
 .header {
   padding: 10px 20px;
   width: 100%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
   background-color: var(--neutral-700);
 }
 
@@ -20,4 +25,16 @@
   font-weight: bold;
   font-family: "Honk", system-ui;
   color: var(--neutral-700);
+}
+
+.github {
+  width: 32px;
+  filter: invert(23%) sepia(28%) saturate(431%) hue-rotate(240deg)
+    brightness(94%) contrast(89%);
+  transition: 0.3s;
+}
+
+.github:hover {
+  filter: invert(24%) sepia(100%) saturate(2118%) hue-rotate(275deg)
+    brightness(87%) contrast(105%);
 }
