--- a/src/pages/Game/TaggableImage/TaggableImage.module.css
+++ b/src/pages/Game/TaggableImage/TaggableImage.module.css
@@ -17,8 +17,6 @@
 }
 
 .marker {
-  height: 25px;
-  width: 25px;
   position: absolute;
 
   display: flex;
@@ -26,34 +24,35 @@
   justify-content: center;
 
   border-radius: 50px;
-  background-color: var(--accent);
-  box-shadow: 0 0 14px 14px var(--accent);
-
   transform: translate(-50%, -50%);
 }
 
-.markerImg {
+.correct {
+  composes: marker;
+  height: 25px;
+  width: 25px;
+
+  background-color: var(--accent-dark);
+  box-shadow: 0 0 14px 14px var(--accent-dark);
+  animation: fadein 0.3s;
+}
+
+.correctImg {
   max-height: 350%;
   max-width: 350%;
 }
 
 .incorrect {
+  composes: marker;
   height: 16px;
   width: 16px;
-  position: absolute;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  border-radius: 50px;
   background-color: var(--error);
   box-shadow: 0 0 2px 2px var(--error);
   color: white;
   font-weight: bold;
 
   opacity: 0;
-  transform: translate(-50%, -50%);
   animation: fadeout 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -63,4 +62,15 @@
     transform: scale(2) translate(-25%, -25%);
     opacity: 1;
   }
+}
+
+@keyframes fadein {
+  0% {
+    transform: translate(-50%, -400%);
+    opacity: 0;
+  }
+
+  /* 70% {
+    transform: scale(1.1);
+  } */
 }
