--- a/src/pages/Game/index/index.module.css
+++ b/src/pages/Game/index/index.module.css
@@ -1,4 +1,8 @@
 .topContainer {
+  position: sticky;
+  top: 0;
+  z-index: 2;
+
   width: 100%;
   margin-top: 32px;
   margin-bottom: 16px;
@@ -17,6 +21,7 @@
     var(--neutral-900)
   );
   border-radius: 16px;
+  box-shadow: 0 -10px 14px 14px var(--neutral-900);
 }
 
 .title {
