--- a/src/pages/Game/Magnifier/Maginifier.module.css
+++ b/src/pages/Game/Magnifier/Maginifier.module.css
@@ -1,4 +1,4 @@
-.selectionBox {
+.magnifier {
   position: absolute;
   pointer-events: none;
 
@@ -10,61 +10,4 @@
   box-shadow: 0 0 3px 3px var(--neutral-900);
   background-repeat: no-repeat;
   transition: opacity 0.15s;
-}
-
-.menu {
-  margin: 0;
-  padding: 0;
-
-  position: absolute;
-  top: 50%;
-  right: 100%;
-
-  display: flex;
-  flex-direction: column;
-
-  list-style: none;
-  background-image: linear-gradient(
-    90deg,
-    var(--neutral-700),
-    var(--neutral-900)
-  );
-  border-radius: 8px;
-
-  transform: translate(-10px, -50%);
-  overflow: hidden;
-  pointer-events: auto;
-}
-
-.menuLeft {
-  left: 100%;
-  right: auto;
-  transform: translate(10px, -50%);
-}
-
-.item {
-  padding: 8px;
-
-  display: flex;
-  align-items: center;
-  gap: 4px;
-
-  cursor: pointer;
-  color: var(--neutral-100);
-}
-
-.item:hover {
-  background-image: linear-gradient(
-    270deg,
-    var(--accent-dark),
-    var(--neutral-700)
-  );
-}
-
-.img {
-  height: 36px;
-  width: 36px;
-
-  flex-shrink: 0;
-  object-fit: contain;
 }
